--- a/ui/package.json
+++ b/ui/package.json
@@ -4,11 +4,15 @@
   "private": true,
   "dependencies": {
     "moment": "^2.24.0",
+    "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-barcode-reader": "0.0.1",
+    "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.8.6",
     "react-fontawesome": "^1.6.1",
+    "react-modal": "^3.8.1",
     "react-scripts": "3.0.1",
+    "react-table": "^6.10.0",
     "webrtc-adapter": "^7.2.4"
   },
   "scripts": {
