--- a/ui/package.json
+++ b/ui/package.json
@@ -9,6 +9,7 @@
     "react": "^16.8.6",
     "react-barcode-reader": "0.0.1",
     "react-bootstrap": "^1.0.0-beta.9",
+    "react-datepicker": "^2.7.0",
     "react-dom": "^16.8.6",
     "react-fontawesome": "^1.6.1",
     "react-modal": "^3.8.1",
