--- a/api/package.json
+++ b/api/package.json
@@ -6,8 +6,8 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.13.2",
+    "body-parser": "^1.19.0",
     "cookie-parser": "~1.3.5",
-    "express": "~4.13.1"
+    "express": "^4.17.1"
   }
 }
