--- a/ui/package.json
+++ b/ui/package.json
@@ -18,6 +18,7 @@
     "react-fontawesome": "^1.6.1",
     "react-i18next": "^10.11.3",
     "react-modal": "^3.8.1",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "^3.0.1",
     "react-table": "^6.10.0",
     "react-tooltip": "^3.10.0",
