--- a/api/package.json
+++ b/api/package.json
@@ -12,6 +12,7 @@
     "cookie-parser": "~1.3.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "lodash": "^4.17.15",
     "mssql": "^5.1.0",
     "tedious": "^2.7.0",
     "tedious-connection-pool": "^1.0.5"
