--- a/api/config.json
+++ b/api/config.json
@@ -1,6 +1,6 @@
 {
-    "user": "andreDB",
-    "password": "Thisismypassword1",
-    "server": "localhost",
+    "user": "appUser",
+    "password": "5sHEMk45PEtPqxjv8uk9w5gS",
+    "server": "phc-diviot01-dev-sql.database.windows.net",
     "database": "FCGFOTF"
 }
