--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "lodash": "^4.17.15",
+    "moment": "^2.24.0",
     "mssql": "^5.1.0",
     "tedious": "^2.7.0",
     "tedious-connection-pool": "^1.0.5"
