--- a/api/config.json
+++ b/api/config.json
@@ -2,5 +2,6 @@
     "user": "appUser",
     "password": "5sHEMk45PEtPqxjv8uk9w5gS",
     "server": "phc-diviot01-dev-sql.database.windows.net",
-    "database": "FCGFOTF"
+    "database": "FCGFOTF",
+    "cors": ["http://localhost:3000"]
 }
