--- a/api/.vscode/launch.json
+++ b/api/.vscode/launch.json
@@ -8,7 +8,7 @@
             "type": "node",
             "request": "launch",
             "name": "Launch Program",
-            "program": "${workspaceFolder}\\api\\routes\\data.js"
+            "program": "${workspaceFolder}/bin/app.js"
         }
     ]
 }
