--- a/ui/src/config.json
+++ b/ui/src/config.json
@@ -2,5 +2,6 @@
     "machine": 10832,
     "user": "Ryan Parker",
     "role": "supervisor",
-    "language": "en-us"
+    "language": "en-us",
+    "clockNumber": 12332009
 }
