--- a/api/config.json
+++ b/api/config.json
@@ -3,7 +3,7 @@
     "password": "5sHEMk45PEtPqxjv8uk9w5gS",
     "server": "phc-diviot01-dev-sql.database.windows.net",
     "database": "FCGFOTF",
-    "cors": ["http://localhost:3000"],
+    "cors": ["http://localhost:3000", "http://localhost:3001"],
     "URL": "http://localhost:3000",
     "signingKey":"JhbGciOiJSUzI1NiJ9",
     "loginURL": "http://localhost:3000/login"
