changes on login

--- a/ui/src/config.json
+++ b/ui/src/config.json
@@ -4,6 +4,7 @@
     "role": "supervisor",
     "language": "en-us",
     "clockNumber": 12332009,
-    "loginPage": "http://localhost:3000",
+    "loginPage": "http://localhost:3000/login",
+    "root": "http://localhost:3000",
     "api": "http://localhost:3001"
 }
