--- a/ui/package.json
+++ b/ui/package.json
@@ -22,6 +22,7 @@
     "react-modal": "^3.8.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "^3.0.1",
+    "react-select": "^3.0.4",
     "react-table": "^6.10.0",
     "react-tooltip": "^3.10.0",
     "webrtc-adapter": "^7.2.4"
