--- a/ui/package.json
+++ b/ui/package.json
@@ -18,6 +18,7 @@
     "react-datepicker": "^2.7.0",
     "react-dom": "^16.8.6",
     "react-fontawesome": "^1.6.1",
+    "react-helmet": "^5.2.1",
     "react-i18next": "^10.11.3",
     "react-modal": "^3.8.1",
     "react-router-dom": "^5.0.1",
