--- a/ui/src/config.json
+++ b/ui/src/config.json
@@ -6,5 +6,6 @@
     "clockNumber": 12332009,
     "loginPage": "http://localhost:3000/login",
     "root": "http://localhost:3000",
-    "api": "http://localhost:8080"
+    "api": "http://localhost:8080",
+    "rollback": 8
 }
