Adding query options to get parameters from url
Adding query options to get parameters from url

--- a/ui/package.json
+++ b/ui/package.json
@@ -8,10 +8,12 @@
     "i18next": "^17.0.6",
     "i18next-browser-languagedetector": "^3.0.1",
     "i18next-xhr-backend": "^3.0.0",
+    "jquery": "^3.4.1",
     "lodash": "^4.17.11",
     "match-sorter": "^3.1.1",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
+    "query-string": "^6.8.2",
     "react": "^16.8.6",
     "react-barcode-reader": "0.0.1",
     "react-bootstrap": "^1.0.0-beta.9",
