Remove onchange of filters and fix language issues
Adding changes to delete onchnage method in the menu filters and fix problems with the language selections

--- a/ui/src/config.json
+++ b/ui/src/config.json
@@ -2,7 +2,7 @@
     "machine": 10832,
     "user": "Ryan Parker",
     "role": "supervisor",
-    "language": "en",
+    "language": "EN-US",
     "clockNumber": 12332009,
     "loginPage": "http://localhost:3000/login",
     "root": "http://localhost:3000",
