--- a/ui/package.json
+++ b/ui/package.json
@@ -28,6 +28,7 @@
     "react-select": "^3.0.4",
     "react-table": "^6.10.0",
     "react-tooltip": "^3.10.0",
+    "socket.io-client": "^2.2.0",
     "webrtc-adapter": "^7.2.4"
   },
   "scripts": {
