--- a/ui/src/config.json
+++ b/ui/src/config.json
@@ -9,5 +9,7 @@
     "root": "http://localhost:3000",
     "api": "http://localhost:8080",
     "rollback": 8, 
-    "timezone": "utc"
+    "timezone": "utc",
+    "first_signoff_reminder": [50, 51, 52, 53, 54, 55, 56, 57, 58, 59],
+    "second_signoff_reminder": 55
 }
