--- a/ui/package.json
+++ b/ui/package.json
@@ -12,6 +12,7 @@
     "lodash": "^4.17.11",
     "match-sorter": "^3.1.1",
     "moment": "^2.24.0",
+    "moment-timezone": "^0.5.26",
     "node-sass": "^4.12.0",
     "query-string": "^6.8.2",
     "react": "^16.8.6",
