--- a/ui/src/config.json
+++ b/ui/src/config.json
@@ -11,6 +11,6 @@
     "api": "http://localhost:8080",
     "rollback": 1, 
     "timezone": "America/New_York",
-    "first_signoff_reminder": [50, 51, 52, 53, 54, 55, 56, 57, 58, 59],
-    "second_signoff_reminder": 55
+    "first_signoff_reminder": [1, 2, 3, 4, 5, 6, 7, 8, 9],
+    "second_signoff_reminder": 5
 }
