--- a/ui/src/config.json
+++ b/ui/src/config.json
@@ -12,5 +12,10 @@
     "rollback": 1, 
     "timezone": "America/New_York",
     "first_signoff_reminder": [1, 2, 3, 4, 5, 6, 7, 8, 9],
-    "second_signoff_reminder": 5
+    "second_signoff_reminder": 5,
+    "shift_order": {
+        "1":3,
+        "2":1,
+        "3":2
+    }
 }
