--- a/ui/src/config-deploy.json
+++ b/ui/src/config-deploy.json
@@ -1,6 +1,7 @@
 {
+    "station": "CR2080435W1",
     "machine": 34002,
-    "machineType": "Partially_Manual_Scan_Order",
+    "machineType": "Automated",
     "user": "Ryan Parker",
     "role": "supervisor",
     "language": "EN-US",
@@ -8,8 +9,13 @@
     "loginPage": "https://dxhweb.azurewebsites.net/login",
     "root": "https://dxhweb.azurewebsites.net",
     "api": "https://dxhapi.azurewebsites.net",
-    "rollback": 8,
-    "timezone": "utc",
-    "first_signoff_reminder": [50, 51, 52, 53, 54, 55, 56, 57, 58, 59],
-    "second_signoff_reminder": 55
+    "rollback": 1, 
+    "timezone": "America/New_York",
+    "first_signoff_reminder": [1, 2, 3, 4, 5, 6, 7, 8, 9],
+    "second_signoff_reminder": 5,
+    "shift_order": {
+        "1":3,
+        "2":1,
+        "3":2
+    }
 }
