--- a/api/package.json
+++ b/api/package.json
@@ -15,6 +15,8 @@
     "cookie-parser": "~1.3.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "localStorage": "^1.0.4",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.26",
