--- a/ui/src/config.json
+++ b/ui/src/config.json
@@ -4,12 +4,17 @@
     "root": "http://localhost:3000",
     "api": "http://localhost:8080",
     "rollback": 1, 
-    "timezone": "America/New_York",
+    "timezone": "Pacific/Wallis",
     "first_signoff_reminder": [1, 2, 3, 4, 5, 6, 7, 8, 9],
     "second_signoff_reminder": 5,
     "shift_order": {
         "1":3,
         "2":1,
         "3":2
+    },
+    "shifts": {
+        "first": 7,
+        "second": 15,
+        "third": 23
     }
 }
