--- a/ui/src/config.json
+++ b/ui/src/config.json
@@ -4,7 +4,7 @@
     "root": "http://localhost:3000",
     "api": "http://localhost:8080",
     "rollback": 1, 
-    "timezone": "Pacific/Wallis",
+    "timezone": "America/New_York",
     "first_signoff_reminder": [1, 2, 3, 4, 5, 6, 7, 8, 9],
     "second_signoff_reminder": 5,
     "shift_order": {
