--- a/api/package.json
+++ b/api/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.19.0",
     "cookie-parser": "~1.3.5",
     "cors": "^2.8.5",
+    "exceljs": "^3.1.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "localStorage": "^1.0.4",
@@ -21,8 +22,10 @@
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.26",
     "mssql": "^5.1.0",
+    "multer": "^1.4.2",
     "njwt": "^1.0.0",
     "node-sessionstorage": "^1.0.0",
+    "path": "^0.12.7",
     "socket.io": "^2.2.0",
     "tedious": "^2.7.0",
     "tedious-connection-pool": "^1.0.5"
