--- a/api/package.json
+++ b/api/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.5.5",
+    "applicationinsights": "^1.5.0",
     "async": "^3.1.0",
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.19.0",
