--- a/api/config-deploy.json
+++ b/api/config-deploy.json
@@ -1,11 +1,11 @@
 {
     "user": "appUser",
-    "password": "5sHEMk45PEtPqxjv8uk9w5gS",
-    "server": "phc-diviot01-dev-sql.database.windows.net",
+    "password": "d??VzYv7r-^n$EA58V2$#ZUa",
+    "server": "phc-diviot01-tst-sql.database.windows.net",
     "database": "FCGFOTF",
     "cors": ["https://dxhapi.azurewebsites.net", "https://dxhweb.azurewebsites.net"],
     "URL": "https://dxhweb.azurewebsites.net",
-    "redirect_uri": "https://edxhapidev.us.parker.corp/auth/token",
+    "redirect_uri": "https://dxhapi.azurewebsites.net/auth/token",
     "app_reg_name": "PHIOTFCGFOTFDev",
     "client_id": "50d83ea6-5d1b-4f96-b6a0-684e41e4d9b7",
     "secret": "Q-x/Sglut50sf8Kd*-icFWfXYMzVgH0F",
@@ -13,7 +13,7 @@
     "badLogin": "https://dxhweb.azurewebsites.net?err=true",
     "signingKey":"JhbGciOiJSUzI1NiJ9",
     "loginURL": "https://dxhweb.azurewebsites.net/dashboard",
-    "socket_timeout": 90000,
+    "socket_timeout": 30000,
     "token_expiration": 14400000,
 
 
@@ -31,6 +31,6 @@
     "badLogin": "https://edxhdev.us.parker.corp?err=true",
     "signingKey":"JhbGciOiJSUzI1NiJ9",
     "loginURL": "https://edxhdev.us.parker.corp/dashboard",
-    "socket_timeout": 90000,
+    "socket_timeout": 30000,
     "token_expiration": 14400000
 }
