--- a/ui/package.json
+++ b/ui/package.json
@@ -18,6 +18,7 @@
     "query-string": "^6.8.2",
     "react": "^16.8.6",
     "react-barcode-reader": "0.0.1",
+    "react-beautiful-dnd": "^12.2.0",
     "react-bootstrap": "^1.0.0-beta.9",
     "react-datepicker": "^2.7.0",
     "react-dom": "^16.8.6",
