--- a/api/config-deploy.json
+++ b/api/config-deploy.json
@@ -1,4 +1,20 @@
 {
+    "user": "parkeradmin",
+    "password": "VFM9rqSkunX4pFPm",
+    "server": "parker-ctpdev-test.database.windows.net",
+    "database": "FCGFOTF",
+    "cors": ["https://dxhapitest.azurewebsites.net", "https://dxhwebtest.azurewebsites.net"],
+    "URL": "https://dxhwebtest.azurewebsites.net",
+    "redirect_uri": "https://dxhapitest.azurewebsites.net/auth/token",
+    "app_reg_name": "PHIOTFCGFOTFDev",
+    "client_id": "50d83ea6-5d1b-4f96-b6a0-684e41e4d9b7",
+    "secret": "Q-x/Sglut50sf8Kd*-icFWfXYMzVgH0F",
+    "tenant_id": "b5da5f35-6442-4f5a-9622-92ec6a535127",
+    "badLogin": "https://dxhwebtest.azurewebsites.net?err=true",
+    "signingKey":"JhbGciOiJSUzI1NiJ9",
+    "loginURL": "https://dxhwebtest.azurewebsites.net/dashboard",
+
+
     "user": "appUser",
     "password": "d??VzYv7r-^n$EA58V2$#ZUa",
     "server": "phc-diviot01-tst-sql.database.windows.net",
@@ -13,8 +29,6 @@
     "badLogin": "https://dxhweb.azurewebsites.net?err=true",
     "signingKey":"JhbGciOiJSUzI1NiJ9",
     "loginURL": "https://dxhweb.azurewebsites.net/dashboard",
-    "socket_timeout": 30000,
-    "token_expiration": 14400000,
 
 
     "user": "appUser",
