Add Paramter for Test and Prod Env

--- a/api/config-deploy.json
+++ b/api/config-deploy.json
@@ -45,6 +45,34 @@
     "badLogin": "https://edxhdev.us.parker.corp?err=true",
     "signingKey":"JhbGciOiJSUzI1NiJ9",
     "loginURL": "https://edxhdev.us.parker.corp/dashboard",
-    "socket_timeout": 60000,
-    "token_expiration": 14400000
+    
+    "user": "appUser",
+    "password": "5sHEMk45PEtPqxjv8uk9w5gS",
+    "server": "phc-diviot01-prd-sql.database.windows.net",
+    "database": "FCGFOTF",
+    "cors": ["https://parkerdaybyhourapi.us.parker.corp", "https://parkerdaybyhour.us.parker.corp"],
+    "URL": "https://parkerdaybyhour.us.parker.corp",
+    "redirect_uri": "https://parkerdaybyhourapi.us.parker.corp/auth/token",
+    "app_reg_name": "PHIOTFCGFOTFDev",
+    "client_id": "50d83ea6-5d1b-4f96-b6a0-684e41e4d9b7",
+    "secret": "Q-x/Sglut50sf8Kd*-icFWfXYMzVgH0F",
+    "tenant_id": "b5da5f35-6442-4f5a-9622-92ec6a535127",
+    "badLogin": "https://parkerdaybyhour.us.parker.corp?err=true",
+    "signingKey":"JhbGciOiJSUzI1NiJ9",
+    "loginURL": "https://parkerdaybyhour.us.parker.corp/dashboard",
+    
+    "user": "appUser",
+    "password": "d??VzYv7r-^n$EA58V2$#ZUa",
+    "server": "phc-diviot01-tst-sql.database.windows.net",
+    "database": "FCGFOTF",
+    "cors": ["https://edxhapitst.us.parker.corp", "https://edxhtst.us.parker.corp"],
+    "URL": "https://edxhtst.us.parker.corp",
+    "redirect_uri": "https://edxhapitst.us.parker.corp/auth/token",
+    "app_reg_name": "PHIOTFCGFOTFDev",
+    "client_id": "50d83ea6-5d1b-4f96-b6a0-684e41e4d9b7",
+    "secret": "Q-x/Sglut50sf8Kd*-icFWfXYMzVgH0F",
+    "tenant_id": "b5da5f35-6442-4f5a-9622-92ec6a535127",
+    "badLogin": "https://edxhtst.us.parker.corp?err=true",
+    "signingKey":"JhbGciOiJSUzI1NiJ9",
+    "loginURL": "https://edxhtst.us.parker.corp/dashboard"
 }
