--- a/ui/src/config-deploy.json
+++ b/ui/src/config-deploy.json
@@ -12,5 +12,19 @@
     "api": "https://edxhapidev.us.parker.corp",
     "rollback": 1,
     "first_signoff_reminder": [1, 2, 3, 4, 5, 6, 7, 8, 9],
+    "second_signoff_reminder": 5,
+
+    "loginPage": "https://parkerdaybyhour.us.parker.corp",
+    "root": "https://parkerdaybyhour.us.parker.corp",
+    "api": "https://parkerdaybyhour.us.parker.corp",
+    "rollback": 1,
+    "first_signoff_reminder": [1, 2, 3, 4, 5, 6, 7, 8, 9],
+    "second_signoff_reminder": 5,
+
+    "loginPage": "https://parkerdaybyhour.us.parker.corp",
+    "root": "https://parkerdaybyhour.us.parker.corp",
+    "api": "https://parkerdaybyhour.us.parker.corp",
+    "rollback": 1,
+    "first_signoff_reminder": [1, 2, 3, 4, 5, 6, 7, 8, 9],
     "second_signoff_reminder": 5
 }
