added the new app registration to the prd and tst environment

--- a/api/config-deploy.json
+++ b/api/config-deploy.json
@@ -53,9 +53,9 @@
     "cors": ["https://parkerdaybyhourapi.us.parker.corp", "https://parkerdaybyhour.us.parker.corp"],
     "URL": "https://parkerdaybyhour.us.parker.corp",
     "redirect_uri": "https://parkerdaybyhourapi.us.parker.corp/auth/token",
-    "app_reg_name": "PHIOTFCGFOTFDev",
-    "client_id": "50d83ea6-5d1b-4f96-b6a0-684e41e4d9b7",
-    "secret": "Q-x/Sglut50sf8Kd*-icFWfXYMzVgH0F",
+    "app_reg_name": "PHIOTEDxH",
+    "client_id": "773c82d8-4a87-488b-80f1-f6d955f5f62e",
+    "secret": "tgnY6?j1.-mg-21-NA_CLgbRR7.Ut5.o",
     "tenant_id": "b5da5f35-6442-4f5a-9622-92ec6a535127",
     "badLogin": "https://parkerdaybyhour.us.parker.corp?err=true",
     "signingKey":"JhbGciOiJSUzI1NiJ9",
@@ -68,9 +68,9 @@
     "cors": ["https://edxhapitst.us.parker.corp", "https://edxhtst.us.parker.corp"],
     "URL": "https://edxhtst.us.parker.corp",
     "redirect_uri": "https://edxhapitst.us.parker.corp/auth/token",
-    "app_reg_name": "PHIOTFCGFOTFDev",
-    "client_id": "50d83ea6-5d1b-4f96-b6a0-684e41e4d9b7",
-    "secret": "Q-x/Sglut50sf8Kd*-icFWfXYMzVgH0F",
+    "app_reg_name": "PHIOTEDxHTest",
+    "client_id": "cc024396-80bd-4f24-be6d-28cedae59768",
+    "secret": "vkbhy5SjS=VBg7Nki-vLO30jmF_AqOn@",
     "tenant_id": "b5da5f35-6442-4f5a-9622-92ec6a535127",
     "badLogin": "https://edxhtst.us.parker.corp?err=true",
     "signingKey":"JhbGciOiJSUzI1NiJ9",
