Adding new api code to improve and clean api
Adding new api code to improve and clean api

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,9 @@ ui/node_modules
 api/node_modules
 ui/build
 api/bin
+api/.vscode
+ui/.vscode
+newapi/api/bin
+newapi/api/node_modules
+newapi/api/.deployment
+newapi/.vscode
