--- a/newapi/api/package.json
+++ b/newapi/api/package.json
@@ -9,7 +9,7 @@
     "build": "tsc",
     "start": "node bin/app.js",
     "dev": "ts-node-dev src/app.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "ts-node-dev src/app.ts"
   },
   "dependencies": {
     "@types/express": "^4.17.3",
