--- a/newapi/api/package.json
+++ b/newapi/api/package.json
@@ -18,6 +18,7 @@
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
+    "exceljs": "^3.8.1",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
