--- a/newapi/api/package.json
+++ b/newapi/api/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
+    "multer": "^1.4.2",
     "njwt": "^1.0.0",
     "request": "^2.88.2",
     "socket.io": "^2.3.0",
