--- a/newapi/api/package.json
+++ b/newapi/api/package.json
@@ -21,6 +21,7 @@
     "exceljs": "^3.8.1",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "localStorage": "^1.0.4",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "multer": "^1.4.2",
