Changes names of the api's
Changes names of the api's

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
-ui/node_modules
 api/node_modules
-ui/build
 api/bin
 api/.vscode
+ui/node_modules
+ui/build
 ui/.vscode
-newapi/api/bin
-newapi/api/node_modules
-newapi/api/.deployment
-newapi/.vscode
+n_api/api/bin
+n_api/api/node_modules
+n_api/api/.deployment
+n_api/.vscode
+old_api/node_modules
+old_api/bin
+old_api/.vscode
