--- a/ui/public/manifest.json
+++ b/ui/public/manifest.json
@@ -1,9 +1,9 @@
 {
-  "short_name": "Parker Hannifin App",
-  "name": "Parker Hannifin App",
+  "short_name": "Day By Hour Application",
+  "name": "Day By Hour Application",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "eyfavicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     }
