--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,9 @@
-ui/node_modules
-api/node_modules
-ui/build
-api/bin
-api/.vscode
+api1/node_modules
+api1/bin
+api1/.vscode
 ui/.vscode
-newapi/api/bin
-newapi/api/node_modules
-newapi/api/.deployment
-newapi/.vscode
+ui/build
+ui/node_modules
+old_api/node_modules
+old_api/bin
+old_api/.vscode
