Catch errors in the login using username and password
Catch errors in the login using username and password

--- a/api/src/configurations/config.json
+++ b/api/src/configurations/config.json
@@ -17,6 +17,7 @@
         "timezone": "MST",
         "URL": "http://localhost:3000",
         "badLogin": "http://localhost:3000?err=true",
+        "badLoginUser": "http://localhost:3000/login?err=true",
         "loginURL": "http://localhost:3000/dashboard"
     },
     "authentication_section": {
