--- a/api/src/configurations/config.json
+++ b/api/src/configurations/config.json
@@ -1,8 +1,8 @@
 {
     "sql_section": {
-        "user": "parkeradmin",
-        "password": "VFM9rqSkunX4pFPm",
-        "server": "parker-ctpdev-test.database.windows.net",
+        "user": "appUser",
+        "password": "d??VzYv7r-^n$EA58V2$#ZUa",
+        "server": "phc-diviot01-tst-sql.database.windows.net",
         "database": "FCGFOTF"
     },
     "app_section": {
@@ -10,14 +10,15 @@
         "prefix": "/",
         "service_name": "Dxh Service",
         "cors": [
-            "https://dxhwebtest.azurewebsites.net",
-            "https://dxhapitest.azurewebsites.net"
+            "http://localhost:3000",
+            "http://localhost:3001"
         ],
-        "redirect_uri": "https://dxhapitest.azurewebsites.net/auth/token",
+        "redirect_uri": "http://localhost:8080/auth/token",
         "timezone": "MST",
-        "URL": "https://dxhwebtest.azurewebsites.net",
-        "badLogin": "https://dxhwebtest.azurewebsites.net?err=true",
-        "loginURL": "https://dxhwebtest.azurewebsites.net/dashboard"
+        "URL": "http://localhost:3000",
+        "badLogin": "http://localhost:3000?err=true",
+        "badLoginUser": "http://localhost:3000/login?err=true",
+        "loginURL": "http://localhost:3000/dashboard"
     },
     "authentication_section": {
         "signingKey": "JhbGciOiJSUzI1NiJ9"
