--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,11 @@ api/.vscode
 old_api/node_modules
 old_api/bin
 old_api/.vscode
+database/DeployDatabase/DeployDatabase/bin
+database/DeployDatabase/DeployDatabase/obj
+database/DeployDatabase/Parker_CTP_Dev/bin
+database/DeployDatabase/Parker_CTP_Dev/obj
+database/DeployDatabase/Parker_Dev/bin
+database/DeployDatabase/Parker_Dev/obj
+database/DeployDatabase/Parker_Prod/bin
+database/DeployDatabase/Parker_Prod/obj
