--- a/.gitignore
+++ b/.gitignore
@@ -14,5 +14,7 @@ database/DeployDatabase/Parker_CTP_Dev/bin
 database/DeployDatabase/Parker_CTP_Dev/obj
 database/DeployDatabase/Parker_Dev/bin
 database/DeployDatabase/Parker_Dev/obj
+database/DeployDatabase/Parker_Test/bin
+database/DeployDatabase/Parker_Test/obj
 database/DeployDatabase/Parker_Prod/bin
 database/DeployDatabase/Parker_Prod/obj
