--- a/.gitignore
+++ b/.gitignore
@@ -12,9 +12,13 @@ database/DeployDatabase/DeployDatabase/bin
 database/DeployDatabase/DeployDatabase/obj
 database/DeployDatabase/Parker_CTP_Dev/bin
 database/DeployDatabase/Parker_CTP_Dev/obj
+database/DeployDatabase/Parker_CTP_Dev/Parker_CTP_Dev.dbmdl
 database/DeployDatabase/Parker_Dev/bin
 database/DeployDatabase/Parker_Dev/obj
+database/DeployDatabase/Parker_Dev/Parker_Dev.dbmdl
 database/DeployDatabase/Parker_Test/bin
 database/DeployDatabase/Parker_Test/obj
+database/DeployDatabase/Parker_Test/Parker_Test.dbmdl
 database/DeployDatabase/Parker_Prod/bin
 database/DeployDatabase/Parker_Prod/obj
+database/DeployDatabase/Parker_Prod/Parker_Prod.dbmdl
