--- a/api/src/configurations/config.json
+++ b/api/src/configurations/config.json
@@ -1,32 +1,32 @@
 {
     "sql_section": {
         "user": "appUser",
-        "password": "5sHEMk45PEtPqxjv8uk9w5gS",
-        "server": "phc-diviot01-prd-sql.database.windows.net",
+        "password": "d??VzYv7r-^n$EA58V2$#ZUa",
+        "server": "phc-diviot01-tst-sql.database.windows.net",
         "database": "FCGFOTF"
     },
     "app_section": {
         "port": 8080,
         "prefix": "/",
-        "service_name": "Dxh Service",
+        "service_name": "Dxh Service Test API",
         "cors": [
-            "http://localhost:3000",
-            "http://localhost:3001"
+            "https://edxhapitst.us.parker.corp",
+            "https://edxhtst.us.parker.corp"
         ],
-        "redirect_uri": "http://localhost:8080/auth/token",
+        "redirect_uri": "https://edxhapitst.us.parker.corp/auth/token",
         "timezone": "MST",
-        "URL": "http://localhost:3000",
-        "badLogin": "http://localhost:3000?err=true",
-        "badLoginUser": "http://localhost:3000/login?err=true",
-        "loginURL": "http://localhost:3000/dashboard"
+        "URL": "https://edxhtst.us.parker.corp",
+        "badLogin": "https://edxhtst.us.parker.corp?err=true",
+        "badLoginUser": "https://edxhtst.us.parker.corp/login?err=true",
+        "loginURL": "https://edxhtst.us.parker.corp/dashboard"
     },
     "authentication_section": {
         "signingKey": "JhbGciOiJSUzI1NiJ9"
     },
     "ad_authentication_section": {
-        "app_reg_name": "PHIOTEDxH",
-        "client_id": "773c82d8-4a87-488b-80f1-f6d955f5f62e",
-        "secret": "tgnY6?j1.-mg-21-NA_CLgbRR7.Ut5.o",
+        "app_reg_name": "PHIOTEDxHTest",
+        "client_id": "cc024396-80bd-4f24-be6d-28cedae59768",
+        "secret": "vkbhy5SjS=VBg7Nki-vLO30jmF_AqOn@",
         "tenant_id": "b5da5f35-6442-4f5a-9622-92ec6a535127"
     },
     "azure_section": {
