--- a/.gitignore
+++ b/.gitignore
@@ -9,13 +9,11 @@ old_api/node_modules
 old_api/bin
 old_api/.vscode
 database/DeployDatabase/.vs
-database/DeployDatabase/DeployDatabase/bin
-database/DeployDatabase/DeployDatabase/obj
 database/DeployDatabase/Parker_CTP_Dev/bin
 database/DeployDatabase/Parker_CTP_Dev/obj
-database/DeployDatabase/Parker_Dev/bin
-database/DeployDatabase/Parker_Dev/obj
-database/DeployDatabase/Parker_Test/bin
-database/DeployDatabase/Parker_Test/obj
-database/DeployDatabase/Parker_Prod/bin
-database/DeployDatabase/Parker_Prod/obj
+database/DeployDatabase/Parker_CTP_Dev/*.dbmdl
+database/DeployDatabase/Parker_CTP_Dev/*.jfm
+database/DeployDatabase/ParkerDB/bin
+database/DeployDatabase/ParkerDB/obj
+database/DeployDatabase/ParkerDB/*.dbmdl
+database/DeployDatabase/ParkerDB/*.jfm
