--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@ database/DeployDatabase/.vs
 database/DeployDatabase/Parker_CTP_Dev/bin
 database/DeployDatabase/Parker_CTP_Dev/obj
 database/DeployDatabase/Parker_CTP_Dev/Parker_CTP_Dev.dbmdl
-database\DeployDatabase\Parker_CTP_Dev\Parker_CTP_Dev.jfm
+database/DeployDatabase/Parker_CTP_Dev/Parker_CTP_Dev.jfm
 database/DeployDatabase/ParkerDB/bin
 database/DeployDatabase/ParkerDB/obj
 database/DeployDatabase/ParkerDB/ParkerDB.dbmdl
