--- a/ui/package.json
+++ b/ui/package.json
@@ -14,12 +14,12 @@
     "match-sorter": "^3.1.1",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.26",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.14.1",
     "query-string": "^6.8.2",
     "react": "^16.8.6",
     "react-barcode-reader": "0.0.1",
     "react-beautiful-dnd": "^12.2.0",
-    "react-bootstrap": "^1.0.0-beta.9",
+    "react-bootstrap": "^1.4.3",
     "react-datepicker": "^2.7.0",
     "react-dom": "^16.8.6",
     "react-fontawesome": "^1.6.1",
