--- a/ui/package.json
+++ b/ui/package.json
@@ -26,11 +26,13 @@
     "react-helmet": "^5.2.1",
     "react-i18next": "^10.11.3",
     "react-modal": "^3.8.1",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.0.1",
     "react-scripts": "^3.3.0",
     "react-select": "^3.0.4",
     "react-table": "^6.10.0",
     "react-tooltip": "^3.10.0",
+    "redux": "^4.0.5",
     "socket.io-client": "^2.2.0",
     "webrtc-adapter": "^7.2.4"
   },
