--- a/ui/package.json
+++ b/ui/package.json
@@ -33,6 +33,7 @@
     "react-table": "^6.10.0",
     "react-tooltip": "^3.10.0",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "socket.io-client": "^2.2.0",
     "webrtc-adapter": "^7.2.4"
   },
