--- a/ui/package.json
+++ b/ui/package.json
@@ -31,6 +31,7 @@
     "react-scripts": "^3.3.0",
     "react-select": "^3.0.4",
     "react-table": "^6.10.0",
+    "react-time-picker": "^4.1.2",
     "react-tooltip": "^3.10.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
