--- a/api/package.json
+++ b/api/package.json
@@ -36,5 +36,9 @@
   },
   "engines": {
     "node": ">=10.16.3"
+  },
+  "devDependencies": {
+    "@types/tedious": "^4.0.3",
+    "@types/tedious-connection-pool": "^1.0.2"
   }
 }
