Fix of bugs founds in digital cups, comments, intershift data and import export tool. Include validation to filter assets by workcell

--- a/api/src/configurations/config-deploy.json
+++ b/api/src/configurations/config-deploy.json
@@ -3,6 +3,25 @@
     "password": "VFM9rqSkunX4pFPm",
     "server": "parker-ctpdev-test.database.windows.net",
     "database": "FCGFOTF",
+    "cors": ["http://localhost:8080", "http://localhost:3000"],
+    "redirect_uri": "http://localhost:8080/auth/token",
+    "timezone": "MST",
+    "URL": "http://localhost:3000",
+    "badLogin": "http://localhost:3000?err=true",
+    "badLoginUser": "http://localhost:3000/login?err=true",
+    "loginURL": "http://localhost:3000/dashboard",
+    "signingKey": "JhbGciOiJSUzI1NiJ9",
+    "app_reg_name": "PHIOTFCGFOTFDev",
+    "client_id": "50d83ea6-5d1b-4f96-b6a0-684e41e4d9b7",
+    "secret": "Q-x/Sglut50sf8Kd*-icFWfXYMzVgH0F",
+    "tenant_id": "b5da5f35-6442-4f5a-9622-92ec6a535127",
+    "appInsights": "4fd470bc-86cd-4558-86e3-74371a00bc3c",
+
+
+    "user": "parkeradmin",
+    "password": "VFM9rqSkunX4pFPm",
+    "server": "parker-ctpdev-test.database.windows.net",
+    "database": "FCGFOTF",
     "cors": ["https://dxhapitest.azurewebsites.net", "https://dxhwebtest.azurewebsites.net"],
     "URL": "https://dxhwebtest.azurewebsites.net",
     "redirect_uri": "https://dxhapitest.azurewebsites.net/auth/token",
