Update config JSON to use Dev database

--- a/api/src/configurations/config.json
+++ b/api/src/configurations/config.json
@@ -3,7 +3,7 @@
         "user": "parkeradmin",
         "password": "VFM9rqSkunX4pFPm",
         "server": "parker-ctpdev-test.database.windows.net",
-        "database": "FCGFOTF"
+        "database": "FCGFOTF_Dev"
     },
     "app_section": {
         "port": 8080,
