--- a/api/src/configurations/config-deploy.json
+++ b/api/src/configurations/config-deploy.json
@@ -6,7 +6,7 @@
     "port": 8080,
     "prefix": "/",
     "service_name": "Dxh Service Dev API",
-    "cors": ["http://localhost:8080", "http://localhost:3000?err=true"],
+    "cors": ["http://localhost:8080", "http://localhost:3000"],
     "redirect_uri": "http://localhost:8080/auth/token",
     "timezone": "MST",
     "URL": "http://localhost:3000",
