--- a/api/src/configurations/config-deploy.json
+++ b/api/src/configurations/config-deploy.json
@@ -1,101 +1,18 @@
 {
-    "user": "parkeradmin",
-    "password": "VFM9rqSkunX4pFPm",
-    "server": "parker-ctpdev-test.database.windows.net",
-    "database": "FCGFOTF_Dev",
-    "port": 8080,
-    "prefix": "/",
-    "service_name": "Dxh Service Dev API",
-    "cors": ["http://localhost:8080", "http://localhost:3000"],
-    "redirect_uri": "http://localhost:8080/auth/token",
-    "URL": "http://localhost:3000",
-    "badLogin": "http://localhost:3000?err=true",
-    "badLoginUser": "http://localhost:3000/login?err=true",
-    "loginURL": "http://localhost:3000/dashboard",
-    "signingKey": "JhbGciOiJSUzI1NiJ9",
-    "app_reg_name": "PHIOTFCGFOTFDev",
-    "client_id": "50d83ea6-5d1b-4f96-b6a0-684e41e4d9b7",
-    "secret": "Q-x/Sglut50sf8Kd*-icFWfXYMzVgH0F",
-    "tenant_id": "b5da5f35-6442-4f5a-9622-92ec6a535127",
-    "appInsights": "4fd470bc-86cd-4558-86e3-74371a00bc3c",
-
-    "user": "parkeradmin",
-    "password": "VFM9rqSkunX4pFPm",
-    "server": "parker-ctpdev-test.database.windows.net",
-    "database": "FCGFOTF",
-    "port": 8080,
-    "prefix": "/",
-    "service_name": "Dxh Service Demo API",
-    "cors": ["https://dxhapitest.azurewebsites.net", "https://dxhwebtest.azurewebsites.net"],
-    "redirect_uri": "https://dxhapitest.azurewebsites.net/auth/token",
-    "timezone": "MST",
-    "URL": "https://dxhwebtest.azurewebsites.net",
-    "badLogin": "https://dxhwebtest.azurewebsites.net?err=true",
-    "badLoginUser": "https://dxhwebtest.azurewebsites.net/login?err=true",
-    "loginURL": "https://dxhwebtest.azurewebsites.net/dashboard",
-    "signingKey": "JhbGciOiJSUzI1NiJ9",
-    "app_reg_name": "PHIOTFCGFOTFDev",
-    "client_id": "50d83ea6-5d1b-4f96-b6a0-684e41e4d9b7",
-    "secret": "Q-x/Sglut50sf8Kd*-icFWfXYMzVgH0F",
-    "tenant_id": "b5da5f35-6442-4f5a-9622-92ec6a535127",
-    "appInsights": "4fd470bc-86cd-4558-86e3-74371a00bc3c",
-
-    "user": "appUser",
-    "password": "d??VzYv7r-^n$EA58V2$#ZUa",
-    "server": "phc-diviot01-tst-sql.database.windows.net",
-    "database": "FCGFOTF",
-    "port": 8080,
-    "prefix": "/",
-    "service_name": "Dxh Service Test API",
-    "cors": ["https://edxhapitst.us.parker.corp", "https://edxhtst.us.parker.corp"],
-    "redirect_uri": "https://edxhapitst.us.parker.corp/auth/token",
-    "timezone": "MST",
-    "URL": "https://edxhtst.us.parker.corp",
-    "badLogin": "https://edxhtst.us.parker.corp?err=true",
-    "badLoginUser": "https://edxhtst.us.parker.corp/login?err=true",
-    "loginURL": "https://edxhtst.us.parker.corp/dashboard",
-    "signingKey": "JhbGciOiJSUzI1NiJ9",
-    "app_reg_name": "PHIOTEDxHTest",
-    "client_id": "cc024396-80bd-4f24-be6d-28cedae59768",
-    "secret": "vkbhy5SjS=VBg7Nki-vLO30jmF_AqOn@",
-    "tenant_id": "b5da5f35-6442-4f5a-9622-92ec6a535127",
-    "appInsights": "e9f305ee-5689-4e1a-b95e-8f4037b9d2c7",
-
-    "user": "appUser",
-    "password": "5sHEMk45PEtPqxjv8uk9w5gS",
-    "server": "phc-diviot01-prd-sql.database.windows.net",
-    "database": "FCGFOTF",
-    "port": 8080,
-    "prefix": "/",
-    "service_name": "Dxh Service Production API",
-    "cors": ["https://parkerdaybyhourapi.us.parker.corp", "https://parkerdaybyhour.us.parker.corp"],
-    "redirect_uri": "https://parkerdaybyhourapi.us.parker.corp/auth/token",
-    "timezone": "MST",
-    "URL": "https://parkerdaybyhour.us.parker.corp",
-    "badLogin": "https://parkerdaybyhour.us.parker.corp?err=true",
-    "badLoginUser": "https://parkerdaybyhour.us.parker.corp/login?err=true",
-    "loginURL": "https://parkerdaybyhour.us.parker.corp/dashboard",
-    "signingKey": "JhbGciOiJSUzI1NiJ9",
-    "app_reg_name": "PHIOTEDxH",
-    "client_id": "773c82d8-4a87-488b-80f1-f6d955f5f62e",
-    "secret": "tgnY6?j1.-mg-21-NA_CLgbRR7.Ut5.o",
-    "tenant_id": "b5da5f35-6442-4f5a-9622-92ec6a535127",
-    "appInsights": "385f0d4a-b80b-466d-82c1-2258b5d5c03e",
-
     "user": "eytech",
     "password": "?D;}yzpA@Z7xM.G9",
-    "server": "euwdsrg02kasqlsrv01.database.windows.net",
+    "server": "ETLABVMLAZIHSQ1",
     "database": "euwdsrg02kadb01",
     "port": 8080,
     "prefix": "/",
-    "service_name": "eDBH Service NSIH API",
-    "cors": ["https://euwdsrg02krsg01app02.azurewebsites.net","https://euwdsrg02krsg01app01.azurewebsites.net"],
-    "redirect_uri": "https://euwdsrg02krsg01app02.azurewebsites.net/auth/token",
+    "service_name": "Day By Hour Innovation Hub API",
+    "cors": ["https://edbh-api.kube-environment-vforyk2.eastus.k4apps.io", "https://edbh-ui.kube-environment-vforyk2.eastus.k4apps.io"],
+    "redirect_uri": "https://edbh-api.kube-environment-vforyk2.eastus.k4apps.io/auth/token",
     "timezone": "MST",
-    "URL": "https://euwdsrg02krsg01app01.azurewebsites.net",
-    "badLogin": "https://euwdsrg02krsg01app01.azurewebsites.net?err=true",
-    "badLoginUser": "https://euwdsrg02krsg01app01.azurewebsites.net/login?err=true",
-    "loginURL": "https://euwdsrg02krsg01app01.azurewebsites.net/dashboard",
+    "URL": "https://edbh-ui.kube-environment-vforyk2.eastus.k4apps.io",
+    "badLogin": "https://edbh-ui.kube-environment-vforyk2.eastus.k4apps.io?err=true",
+    "badLoginUser": "https://edbh-ui.kube-environment-vforyk2.eastus.k4apps.io/login?err=true",
+    "loginURL": "https://edbh-ui.kube-environment-vforyk2.eastus.k4apps.io/dashboard",
     "signingKey": "JhbGciOiJSUzI1NiJ9",
     "app_reg_name": "PHIOTFCGFOTFDev",
     "client_id": "50d83ea6-5d1b-4f96-b6a0-684e41e4d9b7",
