--- a/ui/src/config-deploy.json
+++ b/ui/src/config-deploy.json
@@ -8,38 +8,12 @@
     "second_signoff_reminder": 5,
     "appInsightsKey": "4fd470bc-86cd-4558-86e3-74371a00bc3c",
 
-    "loginPage": "https://dxhwebtest.azurewebsites.net",
-    "root": "https://dxhwebtest.azurewebsites.net",
-    "api": "https://dxhapitest.azurewebsites.net",
+    "loginPage": "https://edbh-ui.kube-environment-vforyk2.eastus.k4apps.io",
+    "root": "https://edbh-ui.kube-environment-vforyk2.eastus.k4apps.io",
+    "api": "https://edbh-api.kube-environment-vforyk2.eastus.k4apps.io",
     "rollback": 1,
     "first_signoff_reminder": [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 
         30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59],
-    "second_signoff_reminder": 5,
-    "appInsightsKey": "4fd470bc-86cd-4558-86e3-74371a00bc3c",
-
-    "loginPage": "https://edxhtst.us.parker.corp/login",
-    "root": "https://edxhtst.us.parker.corp",
-    "api": "https://edxhapitst.us.parker.corp",
-    "rollback": 1,
-    "first_signoff_reminder": [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29,
-        30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59],
-    "second_signoff_reminder": 5,
-    "appInsightsKey": "cd486914-f59a-495e-bc5d-016468671ee1",
-
-    "loginPage": "https://parkerdaybyhour.us.parker.corp",
-    "root": "https://parkerdaybyhour.us.parker.corp",
-    "api": "https://parkerdaybyhour.us.parker.corp",
-    "rollback": 1,
-    "first_signoff_reminder": [1, 2, 3, 4, 5, 6, 7, 8, 9],
-    "second_signoff_reminder": 5,
-    "appInsightsKey": "650c5bc1-7545-4d77-a30e-bf58568aa682",
-
-    "loginPage": "https://euwdsrg02krsg01app01.azurewebsites.net",
-    "root": "https://euwdsrg02krsg01app01.azurewebsites.net",
-    "api": "https://euwdsrg02krsg01app02.azurewebsites.net",
-    "rollback": 1,
-    "first_signoff_reminder": [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 
-    30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59],
     "second_signoff_reminder": 5,
     "appInsightsKey": "4fd470bc-86cd-4558-86e3-74371a00bc3c"
 }
